--- a/get_AF/pollen_AF_test.Rmd
+++ b/get_AF/pollen_AF_test.Rmd
@@ -45,18 +45,15 @@ cross7_A3 <- cross7 %>% filter(chrom == "A3")
 cross7_A4 <- cross7 %>% filter(chrom == "A4")
 
 
-
 cross7_A4[, c("odds_ratio", "p_value") := fisher_test(dad0, dad1, pollen0, pollen1), by = 1:nrow(cross7_A4)]
 cross7_A3[, c("odds_ratio", "p_value") := fisher_test(dad0, dad1, pollen0, pollen1), by = 1:nrow(cross7_A3)]
 cross7_A1[, c("odds_ratio", "p_value") := fisher_test(dad0, dad1, pollen0, pollen1), by = 1:nrow(cross7_A1)]
 cross7_A2[, c("odds_ratio", "p_value") := fisher_test(dad0, dad1, pollen0, pollen1), by = 1:nrow(cross7_A2)]
 
-
-
 ```
  
 ```{r}
-p1 <- ggplot(cross7_A3, aes(x = pos/1000000, y = -log10(p_value)))+geom_point(size = 0.3, alpha=0.3, colour = "darkblue")+ facet_grid(.~chrom,scales="free_x", switch = "x", space = "free_x") +  xlab(" ")+ylab("-log10(p)")+theme_bw() + theme(panel.grid.major = element_blank(),panel.grid.minor = element_blank(), axis.ticks.x = element_blank(),panel.spacing = unit(0.1, "cm"),strip.background = element_blank(),strip.placement = "outside")+ theme(text = element_text(size = 10)) 
+p1 <- ggplot(cross7_A3, aes(x = pos/1000000, y = -log10(p_value)))+geom_point(size = 0.3, alpha=0.3)+ facet_grid(.~chrom,scales="free_x", switch = "x", space = "free_x") +  xlab(" ")+ylab("-log10(p)")+theme_bw() + theme(panel.grid.major = element_blank(),panel.grid.minor = element_blank(), axis.ticks.x = element_blank(),panel.spacing = unit(0.1, "cm"),strip.background = element_blank(),strip.placement = "outside")+ theme(text = element_text(size = 10)) 
 
 p2 <- ggplot(cross7_A2, aes(x = pos/1000000, y = -log10(p_value)))+geom_point(size = 0.3, alpha=0.3)+ facet_grid(.~chrom,scales="free_x", switch = "x", space = "free_x") +  xlab(" ")+ylab(" ")+theme_bw() + theme(panel.grid.major = element_blank(),panel.grid.minor = element_blank(), axis.ticks.x = element_blank(),panel.spacing = unit(0.1, "cm"),strip.background = element_blank(),strip.placement = "outside")+ theme(text = element_text(size = 10)) + ylim(0, 9)
 
@@ -106,24 +103,16 @@ fisher_test <- function(dad0, dad1, pollen0, pollen1) {
 
 cross5_A4[, c("odds_ratio", "p_value") := fisher_test(dad0, dad1, pollen0, pollen1), by = 1:nrow(cross5_A4)]
 cross5_A3[, c("odds_ratio", "p_value") := fisher_test(dad0, dad1, pollen0, pollen1), by = 1:nrow(cross5_A3)]
-
-
 cross5_A1[, c("odds_ratio", "p_value") := fisher_test(dad0, dad1, pollen0, pollen1), by = 1:nrow(cross5_A1)]
 cross5_A2[, c("odds_ratio", "p_value") := fisher_test(dad0, dad1, pollen0, pollen1), by = 1:nrow(cross5_A2)]
-
-
-
 
 write.table(cross5_A4, file=paste0(data, "cross5_A4"), quote = F, row.names = F,sep = "\t")
 write.table(cross5_A1, file=paste0(data, "cross5_A1"), quote = F, row.names = F,sep = "\t")
 write.table(cross5_A2, file=paste0(data, "cross5_A2"), quote = F, row.names = F,sep = "\t")
 write.table(cross5_A3, file=paste0(data, "cross5_A3"), quote = F, row.names = F,sep = "\t")
 
-
 cross5_A4<- read.table(paste0(data, "cross5_A4"), header = T)
 cross7 <- read.table(paste0(data, "cross7.txt"), header = T)
-
-
 ```
 
 ```{r}
@@ -139,5 +128,16 @@ p1 + p2 + p3 + p4 +plot_layout(nrow = 1)
 ```
 ```{r}
 p1
+```
+
+## A4, Male10
+```{r}
+cross <- read.table(paste0(data,"cross10_15c_test_A4.tmp"))
+colnames(cross) <- c("chrom", "pos", "p_value")
+cross <- cross %>% filter(p_value < 1)
+cross <- cross %>% filter(pos/1000000>140)
+
+p <- ggplot(cross, aes(x = pos/1000000, y = -log10(p_value)))+geom_point(size = 0.3, alpha=0.3)+ xlab("Position on chromosome (Mb)")+ylab("-log10(p value)")+ggtitle(paste0("Male ", 10))+theme_bw() + theme(panel.grid.major = element_blank(),panel.grid.minor = element_blank(), axis.ticks.x = element_blank(),panel.spacing = unit(0.1, "cm"),strip.background = element_blank(),strip.placement = "outside")+ theme(text = element_text(size = 11)) 
+
 ```
 
