--- a/get_AF/pollen_AF_test.Rmd
+++ b/get_AF/pollen_AF_test.Rmd
@@ -12,6 +12,7 @@ library(tidyr)
 library(patchwork)
 library(data.table)
 library(stringr)
+data <- "/Users/yuanmeng/Library/CloudStorage/OneDrive-UniversityofToronto/Manuscripts/pollen_competition/"
 setwd("/Users/yuanmeng/Library/CloudStorage/OneDrive-UniversityofToronto/Manuscripts/pollen_competition/")
 ```
 
@@ -134,8 +135,10 @@ p1
 ```{r}
 cross <- read.table(paste0(data,"cross10_15c_test_A4.tmp"))
 colnames(cross) <- c("chrom", "pos", "p_value")
-cross <- cross %>% filter(p_value < 1)
+#cross <- cross %>% filter(p_value < 1)
 cross <- cross %>% filter(pos/1000000>140)
+
+
 
 p <- ggplot(cross, aes(x = pos/1000000, y = -log10(p_value)))+geom_point(size = 0.3, alpha=0.3)+ xlab("Position on chromosome (Mb)")+ylab("-log10(p value)")+ggtitle(paste0("Male ", 10))+theme_bw() + theme(panel.grid.major = element_blank(),panel.grid.minor = element_blank(), axis.ticks.x = element_blank(),panel.spacing = unit(0.1, "cm"),strip.background = element_blank(),strip.placement = "outside")+ theme(text = element_text(size = 11)) 
 
